findFilteredCombinations함수 오류 수정